--- a/luasrc/view/poweroffdevice/poweroffdevice.htm
+++ b/luasrc/view/poweroffdevice/poweroffdevice.htm
@@ -12,7 +12,7 @@
 <p><%:Turn off the power to the device you are using%></p>
 
 <br />
-	<p class="alert-message warning"><%:WARNING: Power off might result in a pw on a device which not support power off.%></p>
+	<p class="alert-message warning"><%:WARNING: Power off might result in a reboot on a device which not support power off.%></p>
 <br />
 <hr />
 
